Fix emoji jumping in macos perf page

--- a/scss/site/performance.scss
+++ b/scss/site/performance.scss
@@ -979,6 +979,7 @@ table.sauce-perf {
                             font-size: 0.92em;
                             opacity: 0.85;
                             justify-content: space-between;
+                            line-height: 1.5;  // Fix macos emoji height jumping
 
                             > * {
                                 white-space: nowrap;
